k8s/api-development-init.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-init
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-init
  template:
    metadata:
      labels:
        app: api-init
    spec:
      serviceAccountName: migration-waiter
      containers:
        - name: users-api
          image: sammysamzy/node-postgres-api:v2
          ports:
            - containerPort: 4000
