k8s/recommendation.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recommendation
  template:
    metadata:
      labels:
        app: recommendation
    spec:
      containers:
        - name: recommendation
          image: sammysamzy/recommendation:v1
          ports:
            - containerPort: 8080
