k8s/voting-development.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voting
  template:
    metadata:
      labels:
        app: voting
    spec:
      containers:
        - name: voting
          image: sammysamzy/craftista-voting:v2
          ports:
            - containerPort: 8080
