k8s/api-init-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-init-service
spec:
  selector:
    app: api-init
  ports:
    - port: 4000
      targetPort: 4000
