k8s/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
    - port: 4000
      targetPort: 4000
