k8s/catalogue-service.yml
apiVersion: v1
kind: Service
metadata:
  name: catalogue
spec:
  selector:
    app: catalogue
  ports:
    - port: 5000
      targetPort: 5000
