k8s/recommendation-service.yml
apiVersion: v1
kind: Service
metadata:
  name: recommendation-service
spec:
  selector:
    app: recommendation
  ports:
    - port: 8080
      targetPort: 8080
