k8s/voting-service.yml
apiVersion: v1
kind: Service
metadata:
  name: voting-service
spec:
  selector:
    app: voting
  ports:
    - port: 8080
      targetPort: 8080
